--- a/vignettes/examplesnd.Rmd
+++ b/vignettes/examplesnd.Rmd
@@ -48,12 +48,9 @@ proj_wbull <- function(len, n) rweibull(n, shape = 1.5, scale = len / 2) - len /
 ```
 
 ```{r}
-set.seed(seed)
-e79 <- clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0)
-set.seed(seed)
-e80 <- clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0, proj_dist_fn = "unif")
-set.seed(seed)
-e81 <- clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0, proj_dist_fn = proj_wbull)
+e79 <- clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0, seed = seed)
+e80 <- clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0, seed = seed, proj_dist_fn = "unif")
+e81 <- clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0, seed = seed, proj_dist_fn = proj_wbull)
 ```
 
 ```{r}
@@ -72,8 +69,8 @@ seed <- 321
 ```
 
 ```{r}
-set.seed(seed)
-e82 <- clugen(nd, 6, 1500, c(1, 1, 0.5, 0, 0), pi / 16, rep.int(30, nd), 30, 4, 3)
+e82 <- clugen(nd, 6, 1500, c(1, 1, 0.5, 0, 0), pi / 16, rep.int(30, nd), 30, 4, 3,
+              seed = seed)
 ```
 
 ```{r, fig.asp = 1}
@@ -88,9 +85,8 @@ seed <- 123
 ```
 
 ```{r}
-set.seed(seed)
 e83 <- clugen(nd, 6, 1500, c(0.1, 0.3, 0.5, 0.3, 0.1), pi / 12, rep.int(30, nd),
-              35, 5, 3.5,
+              35, 5, 3.5, seed = seed,
               proj_dist_fn = "unif", point_dist_fn = "n")
 ```
 
