--- a/vignettes/dev.Rmd
+++ b/vignettes/dev.Rmd
@@ -77,7 +77,7 @@ Check that it works:
 ```{r, out.width = "100%", dpi = 200}
 library(clugenr)
 x <- clugen(2, 5, 800, c(-1, 1), 0.6, c(4, 6), 5, 0.4, 0.5)
-plot(x$points, col = x$point_clusters, xlab = "x", ylab = "y", asp = 1)
+plot(x$points, col = x$clusters, xlab = "x", ylab = "y", asp = 1)
 
 ```
 
