Set proper vignette dependencies

--- a/vignettes/examples3d.Rmd
+++ b/vignettes/examples3d.Rmd
@@ -5,6 +5,7 @@ vignette: >
   %\VignetteIndexEntry{Examples in 3D}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+  %\VignetteDepends{rgl}
 ---
 
 ```{r, include = FALSE}
