--- a/vignettes/examples2d.Rmd
+++ b/vignettes/examples2d.Rmd
@@ -5,6 +5,7 @@ vignette: >
   %\VignetteIndexEntry{Examples in 2D}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+  %\VignetteDepends{ggplot2,patchwork}
 ---
 
 ```{r, include = FALSE}
