Reorganize example plotting function into several files

--- a/vignettes/examples2d.Rmd
+++ b/vignettes/examples2d.Rmd
@@ -26,16 +26,14 @@ Examples require the following setup code:
 library(clugenr)
 
 # Load functions for plotting examples
-source("plot_examples.R", local = knitr::knit_global())
+source("plot_examples_2d.R", local = knitr::knit_global())
 
 # Keep examples reproducible in newer R versions 
 RNGversion("3.6.0") 
 ```
 
-The
-[`plot_examples.R`](https://github.com/clugen/clugenr/blob/master/vignettes/plot_examples.R)
-containing the helper functions for plotting these examples is available
-[here](https://github.com/clugen/clugenr/blob/master/vignettes/plot_examples.R).
+The 2D examples were plotted with the `plot_examples_2d()` function available
+[here](https://github.com/clugen/clugenr/blob/master/vignettes/plot_examples_2d.R).
 
 ## Manipulating the direction of cluster-supporting lines
 
