--- a/vignettes/examplesnd.Rmd
+++ b/vignettes/examplesnd.Rmd
@@ -26,18 +26,17 @@ This vignette contains a number of examples on how to use `clugenr` in 1D and
 library(clugenr)
 
 # Load functions for plotting examples
-source("plot_examples.R", local = knitr::knit_global())
+source("plot_examples_1d.R", local = knitr::knit_global())
+source("plot_examples_nd.R", local = knitr::knit_global())
 
 # Keep examples reproducible in newer R versions 
 RNGversion("3.6.0") 
 ```
 
-The
-[`plot_examples.R`](https://github.com/clugen/clugenr/blob/master/vignettes/plot_examples.R)
-containing the helper functions for plotting these examples is available
-[here](https://github.com/clugen/clugenr/blob/master/vignettes/plot_examples.R).
-
 ## Basic 1D example with density plot
+
+The 1D examples were plotted with the `plot_examples_1d()` function available
+[here](https://github.com/clugen/clugenr/blob/master/vignettes/plot_examples_1d.R).
 
 ```{r}
 seed <- 222
@@ -63,6 +62,9 @@ plot_examples_1d(list(e = e79, t = "e79: proj_dist_fn='norm'"),
 ```
 
 ## 5D example with default optional arguments
+
+The 5D examples were plotted with the `plot_examples_nd()` function available
+[here](https://github.com/clugen/clugenr/blob/master/vignettes/plot_examples_nd.R).
 
 ```{r}
 nd <- 5
