Docs: add example of direct spec functionality

--- a/vignettes/examples2d.Rmd
+++ b/vignettes/examples2d.Rmd
@@ -70,7 +70,7 @@ angdel_90_fn <- function(nclu, astd) sample(c(0, pi / 2), nclu, replace = TRUE)
 e004 <- clugen(2, 6, 500, c(1, 0), 0, c(10, 10), 10, 1.5, 0.5, seed = seed)
 e005 <- clugen(2, 6, 500, c(1, 0), pi / 8, c(10, 10), 10, 1.5, 0.5, seed = seed)
 e006 <- clugen(2, 6, 500, c(1, 0), 0, c(10, 10), 10, 1.5, 0.5, seed = seed,
-              angle_deltas_fn = angdel_90_fn)
+               angle_deltas_fn = angdel_90_fn)
 ```
 
 ```{r}
@@ -89,11 +89,11 @@ seed <- 321
 
 ```{r}
 e007 <- clugen(2, 5, 800, c(1, 0), pi / 10, c(10, 10), 0, 0, 0.5, seed = seed,
-              point_dist_fn = "n")
+               point_dist_fn = "n")
 e008 <- clugen(2, 5, 800, c(1, 0), pi / 10, c(10, 10), 10, 0, 0.5, seed = seed,
-              point_dist_fn = "n")
+               point_dist_fn = "n")
 e009 <- clugen(2, 5, 800, c(1, 0), pi / 10, c(10, 10), 30, 0, 0.5, seed = seed,
-              point_dist_fn = "n")
+               point_dist_fn = "n")
 ```
 
 ```{r}
@@ -117,11 +117,11 @@ llen_grow_fn <- function(nclu, llen, llenstd) {
 
 ```{r}
 e010 <- clugen(2, 5, 800, c(1, 0), pi / 10, c(10, 10), 15,  0.0, 0.5,
-              seed = seed, point_dist_fn = "n")
+               seed = seed, point_dist_fn = "n")
 e011 <- clugen(2, 5, 800, c(1, 0), pi / 10, c(10, 10), 15, 10.0, 0.5,
-              seed = seed, point_dist_fn = "n")
+               seed = seed, point_dist_fn = "n")
 e012 <- clugen(2, 5, 800, c(1, 0), pi / 10, c(10, 10), 10,  0.1, 0.5,
-              seed = seed, llengths_fn = llen_grow_fn, point_dist_fn = "n")
+               seed = seed, llengths_fn = llen_grow_fn, point_dist_fn = "n")
 ```
 
 ```{r}
@@ -167,9 +167,9 @@ centers_diag <- function(nclu, csep, coff) {
 ```{r}
 e016 <- clugen(2, 8, 1000, c(1, 1), pi / 4, c(10, 10), 10, 2, 2.5, seed = seed)
 e017 <- clugen(2, 8, 1000, c(1, 1), pi / 4, c(10, 10), 10, 2, 2.5, seed = seed,
-              cluster_offset = c(20, -20))
+               cluster_offset = c(20, -20))
 e018 <- clugen(2, 8, 1000, c(1, 1), pi / 4, c(10, 10), 10, 2, 2.5, seed = seed,
-              cluster_offset = c(-50, -50), clucenters_fn = centers_diag)
+               cluster_offset = c(-50, -50), clucenters_fn = centers_diag)
 ```
 
 ```{r}
@@ -202,11 +202,11 @@ plot_examples_2d(list(e = e019, t = "e019: lateral_disp = 0"),
 
 ```{r}
 e022 <- clugen(2, 4, 1000, c(1, 0), pi / 2, c(20, 20), 13, 2, 0.0, seed = seed,
-              proj_dist_fn = "unif")
+               proj_dist_fn = "unif")
 e023 <- clugen(2, 4, 1000, c(1, 0), pi / 2, c(20, 20), 13, 2, 1.0, seed = seed,
-              proj_dist_fn = "unif")
+               proj_dist_fn = "unif")
 e024 <- clugen(2, 4, 1000, c(1, 0), pi / 2, c(20, 20), 13, 2, 3.0, seed = seed,
-              proj_dist_fn = "unif")
+               proj_dist_fn = "unif")
 ```
 
 ```{r}
@@ -224,11 +224,11 @@ proj_beta <- function(len, n) len * rbeta(n, 0.1, 0.1) - len / 2
 
 ```{r}
 e025 <- clugen(2, 4, 1000, c(1, 0), pi / 2, c(20, 20), 13, 2, 0.0, seed = seed,
-              proj_dist_fn = proj_beta)
+               proj_dist_fn = proj_beta)
 e026 <- clugen(2, 4, 1000, c(1, 0), pi / 2, c(20, 20), 13, 2, 1.0, seed = seed,
-              proj_dist_fn = proj_beta)
+               proj_dist_fn = proj_beta)
 e027 <- clugen(2, 4, 1000, c(1, 0), pi / 2, c(20, 20), 13, 2, 3.0, seed = seed,
-              proj_dist_fn = proj_beta)
+               proj_dist_fn = proj_beta)
 ```
 
 ```{r}
@@ -253,9 +253,9 @@ proj_beta <- function(len, n) len * rbeta(n, 0.1, 0.1) - len / 2
 ```{r}
 e028 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0, seed = seed)
 e029 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0, seed = seed,
-              proj_dist_fn = "unif")
+               proj_dist_fn = "unif")
 e030 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0, seed = seed,
-              proj_dist_fn = proj_beta)
+               proj_dist_fn = proj_beta)
 ```
 
 ```{r}
@@ -268,11 +268,11 @@ plot_examples_2d(list(e = e028, t = "e028: proj_dist_fn = 'norm' (default)"),
 
 ```{r}
 e031 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0, seed = seed,
-              point_dist_fn = "n")
+               point_dist_fn = "n")
 e032 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0, seed = seed,
-              point_dist_fn = "n", proj_dist_fn = "unif")
+               point_dist_fn = "n", proj_dist_fn = "unif")
 e033 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0, seed = seed,
-              point_dist_fn = "n", proj_dist_fn = proj_beta)
+               point_dist_fn = "n", proj_dist_fn = proj_beta)
 ```
 
 ```{r}
@@ -293,11 +293,11 @@ clupoints_n_1_exp <- function(projs, lat_std, len, clu_dir, clu_ctr) {
 
 ```{r}
 e034 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0, seed = seed,
-              point_dist_fn = clupoints_n_1_exp)
+               point_dist_fn = clupoints_n_1_exp)
 e035 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0, seed = seed,
-              point_dist_fn = clupoints_n_1_exp, proj_dist_fn = "unif")
+               point_dist_fn = clupoints_n_1_exp, proj_dist_fn = "unif")
 e036 <- clugen(2, 5, 1500, c(1, 0), pi / 4, c(20, 20), 14, 2, 2.0, seed = seed,
-              point_dist_fn = clupoints_n_1_exp, proj_dist_fn = proj_beta)
+               point_dist_fn = clupoints_n_1_exp, proj_dist_fn = proj_beta)
 ```
 
 ```{r}
@@ -330,18 +330,53 @@ clusizes_equal <- function(nclu, npts, ae) npts %/% nclu * rep.int(1, nclu)
 
 ```{r}
 e037 <- clugen(2, 4, 1500, c(1, 1), pi, c(20, 20), 0, 0, 5, seed = seed,
-              clucenters_fn = centers_fixed, point_dist_fn = "n")
+               clucenters_fn = centers_fixed, point_dist_fn = "n")
 e038 <- clugen(2, 4, 1500, c(1, 1), pi, c(20, 20), 0, 0, 5, seed = seed,
-              clucenters_fn = centers_fixed, clusizes_fn = clusizes_unif,
-              point_dist_fn = "n")
+               clucenters_fn = centers_fixed, clusizes_fn = clusizes_unif,
+               point_dist_fn = "n")
 e039 <- clugen(2, 4, 1500, c(1, 1), pi, c(20, 20), 0, 0, 5, seed = seed,
-              clucenters_fn = centers_fixed, clusizes_fn = clusizes_equal,
-              point_dist_fn = "n")
+               clucenters_fn = centers_fixed, clusizes_fn = clusizes_equal,
+               point_dist_fn = "n")
 ```
 
 ```{r}
 plot_examples_2d(list(e = e037, t = "e037: normal dist. (default)"),
                  list(e = e038, t = "e038: unif. dist. (custom)"),
                  list(e = e039, t = "e039: equal size (custom)"))
+```
+
+## Direct specification of optional parameters
+
+```{r}
+seed <- 9876
+```
+
+```{r}
+e040 <- clugen(2, 4, 1000, c(-1, 1), 0, c(0, 0), 0, 0, 0.2, seed = seed,
+               proj_dist_fn = "unif", point_dist_fn = "n",
+               clusizes_fn = c(50, 200, 500, 2000), llengths_fn = c(0, 2, 4, 6),
+               clucenters_fn = matrix(c(-5, -5, -2.5, -2.5, 0, 0, 2.5, 2.5),
+                                      nrow = 4, byrow = TRUE))
+e041 <- clugen(2, 5, 1000, matrix(c(1, 1, 1, 0, 1, 0, 0, 1, 0, 1),
+                                  nrow = 5, byrow = TRUE),
+               0, c(0, 0), 0, 0, 0.2, seed = seed,
+               proj_dist_fn = "unif", point_dist_fn = "n",
+               clusizes_fn = c(200, 500, 500, 500, 500),
+               llengths_fn = c(0, 5, 5, 5, 5),
+               clucenters_fn = matrix(c(0, 0, 0, 5, 0, -5, 5, 0, -5, 0),
+                                      nrow = 5, byrow = TRUE))
+e042 <- clugen(2, 5, 1000, matrix(c(0, 1, 0.25, 0.75, 0.5, 0.5, 0.75, 0.25, 1, 0),
+                                  nrow = 5, byrow = TRUE),
+               0, c(0, 0), 5, 0, 0.2, seed = seed,
+               proj_dist_fn = "unif", point_dist_fn = "n",
+               clusizes_fn = c(500, 500, 500, 500, 500),
+               clucenters_fn = matrix(c(-5, 0, -3, -0.3, -1, -0.8, 1, -1.6, 3, -2.5),
+                                      nrow = 5, byrow = TRUE))
+```
+
+```{r}
+plot_examples_2d(list(e = e040, t = "e040: direct params 1"),
+                 list(e = e041, t = "e041: direct params 2"),
+                 list(e = e042, t = "e042: direct params 3"))
 ```
 
