Docs for clumerge(): add data mix example

--- a/vignettes/examplesmrg.Rmd
+++ b/vignettes/examplesmrg.Rmd
@@ -87,3 +87,22 @@ plot_examples_2d(list(e = e092, t = "e092: original merged data sets"),
                  list(e = e095, t = "e095: data sets with noise"),
                  palette = "husl9", pmargin = -0.1)
 ```
+
+## Merging with data not generated with `clugen()`
+
+```{r}
+set.seed(888)
+spc <- prcomp(swiss)
+e096 <- list(points = spc$x[, 1:2], clusters = factor(rep(4L, dim(spc$x)[1])))
+e097 <- clugen(2, 3, 50, c(-0.2, 1), 0., c(0, 0), 45, 5, 1,
+               proj_dist_fn = "unif", clusizes_fn = c(20, 6, 25),
+               clucenters_fn = matrix(c(-55, -5, 0, -20, 40, 0), byrow = TRUE, ncol = 2))
+e098 <- clumerge(e096, e097, clusters_field = NA)
+```
+
+```{r}
+plot_examples_2d(list(e = e096, t = "e096: swiss PCA"),
+                 list(e = e097, t = "e097: clugen"),
+                 list(e = e098, t = "e098: merged"),
+                 palette = "husl9")
+```
